<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!--START Cabecera / Toolbar-->
    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/blanco"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:elevation="4dp"
        android:id="@+id/toolBuena">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/portada" />
        <TextView android:id="@+id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="T1v1"
            />
    </android.support.v7.widget.Toolbar>
    <!--END Cabecera / Toolbar-->
        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">
                    <Switch
                        android:id="@+id/switch2Estados"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tSwitch"
                        android:layout_weight="1"
                        android:onClick="easterEgg"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/tDiscos"
                        android:layout_weight="1"/>

                    <EditText
                        android:id="@+id/editText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number"
                        android:hint="@string/numero"
                        android:layout_weight="1"/>
                </TableRow>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tGrupo" />
                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_gravity="center">
                            <RadioButton
                                android:id="@+id/radioButton6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/g1" />

                            <RadioButton
                                android:id="@+id/radioButton26"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/g2" />

                            <RadioButton
                                android:id="@+id/radioButton36"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/g3" />
                            <RadioButton
                                android:id="@+id/radioButton366"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/g4" />
                        </RadioGroup>
                    </LinearLayout>
                    <ImageView
                        android:id="@+id/imageView66"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:srcCompat="@mipmap/imagen"
                        android:layout_weight="3"
                        android:layout_gravity="right"/>
                </LinearLayout>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1">
                    <ListView
                        android:id="@+id/listView"
                        android:layout_width="wrap_content"
                        android:layout_height="160dp"
                        android:choiceMode="multipleChoice" />
                </TableRow>
                <TableRow android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />
                    <TextView
                        android:text="Aquí saldrá la ciudad que elijas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:textSize="30dp"
                        android:id="@+id/ciudadSeleccionada" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/tFecha"
                        android:id="@+id/etFechaNacimiento"
                        android:layout_weight="1"/>
                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="..."
                        android:id="@+id/button"
                        android:onClick="onClickFecha"
                        android:layout_weight="1"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginBottom="55dp">

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tBoton"
                        android:onClick="click"/>
                </TableRow>
            </TableLayout>
        </ScrollView>

</android.support.constraint.ConstraintLayout>